# JasBlogEditor

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  build.bat  index.html  package-lock.json  package.json  start.bat  verification.md  vite.config.ts
.codex/: context-scan.json  operations-log.md  review-report.md  testing.md
scripts/: ai-inline-suggestion.test.ts  ai-suggestion-chunked-polish.test.ts  ai-suggestion-content.test.ts  ai-suggestion-patch-protocol.test.ts  ai-suggestion-response-protocol.test.ts  ai-suggestion-review-model.test.ts  ai-suggestion-stream.test.ts  ai-suggestion-workflow.test.ts  ai-writing-assistant.test.ts  alignment-followups.test.ts  build-config.test.ts  content-parity.test.ts  dev-app.mjs  dev-port.mjs  dev-port.test.mjs  dev-web.mjs  diary-default-path.test.ts  diary-ui-labels.test.ts  display-metadata.test.ts  document-agent-runtime.test.ts  document-mcp-contract.test.ts  ensure-dev-port.mjs  example-preview-layout.test.ts  example-preview-model.test.ts  generate-icons.mjs  global-shortcut-controller.test.ts  help-frontmatter-content.test.ts  help-frontmatter-window-entry.test.ts  help-modal-content.test.ts  help-modal-structure.test.ts  llm-browser-headers.test.ts  llm-request-headers.test.ts  llm-response-parser.test.ts  llm-smoke-test.mjs  preview-contract.test.ts  search-alignment.test.ts  tauri.mjs  ts-loader.mjs  ui-copy.test.ts  workspace-initialization.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+193 files in other folders)
