[package]
name = "jasblog-editor"
version = "0.1.0"
description = "A blog content editor for JasBlog"
authors = ["you"]
edition = "2021"

[lib]
name = "jasblog_editor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2"
tauri-plugin-http = "2"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows-core = "0.61"
